--- a/stylesQuiz.css
+++ b/stylesQuiz.css
@@ -15,13 +15,15 @@
     justify-content: center;
     overflow: hidden;
     text-align: center;
+    height: 35em;
 }
 
 .progress-container{
     display:flex;
     justify-content: space-between;
-    position: relative;
+    position: absolute;
     margin-bottom: 30px;
+    top: 40%;
     max-width: 100%;
     width:350px;
 }
@@ -79,4 +81,22 @@
     cursor: not-allowed;
     border-radius: 4px;
     color:rgb(241, 241, 241)
+}
+
+.buttons{
+    position: absolute;
+    bottom: 0;
+}
+
+.quizQuestion {
+    display: none;
+    margin: 3em;
+}
+
+#firstQ{
+    display: block;
+}
+
+input[type=text], select, textarea {
+    width: 100%;
 }
