--- a/stylesProducts.css
+++ b/stylesProducts.css
@@ -70,3 +70,8 @@ input[type=submit]:hover {
     display: inline-block;
     margin: 0.5em
 }
+
+.price{
+  text-decoration: none;
+  font-size: 90%;
+}
